commit basic site

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">BACH LE</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#home" class="nav__link active">HOME</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">WORKS</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
                     </ul>
                 </div>
 
@@ -39,14 +39,16 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Bach</span><br> Front-end Developer</h1>
 
                     <a href="#" class="button">Contact</a>
+                    <button class="button__cv" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+
                 </div>
 
                 <div class="home__social">
                     <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <a href="" class="home__social-icon"><i class='bx bxl-facebook' ></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -73,8 +75,17 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Marlon</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <h2 class="about__subtitle">I'm Bach (Alvin) Le</h2>
+                        <p class="about__text">A hardworking, motivated software engineer, specializing in Flutter with a combined experience of
+                            2+ years. I recently graduated from South-Eastern Finland University of Applied Sciences,
+                            and completed my bachelor's degree in Information Technology. I also have a year of
+                            experience working as a Full-Stack Developer. I am looking for opportunities in Full-Stack
+                            and Mobile Development to gain more experience in Software Development.
+                        </p>  
+                        <br>
+                        <p class="about__text">
+                            With a strong passion for coding and learning, I can easily acquire new knowledge, and spend most of my free time self-study with online resources, courses, and reading articles.
+                        </p>         
                     </div>                                   
                 </div>
             </section>
@@ -178,7 +189,7 @@
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enviar" class="contact__button button">
+                        <input type="button" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
@@ -186,13 +197,13 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Marlon</p>
+            <p class="footer__title">Bach Le</p>
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+            <p class="footer__copy">&#169; Bach Le. All rights reserved</p>
         </footer>
 
 
