--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">HOME</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">ABOUT</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">ABOUT ME</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">SKILLS</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">WORKS</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">CONTACT</a></li>
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Bach</span><br> Front-end Developer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="#contact" class="button">Contact</a>
                     <button class="button__cv" onclick="window.open('./assets/bachle_CV.pdf')">Download CV</button>
 
                 </div>
@@ -66,13 +66,12 @@
             </section>
 
             <!--===== ABOUT =====-->
-            <section class="about section " id="about">
-                <h2 class="section-title">About</h2>
+
+            <section class="about section" id="about">
+                <h2 class="section-title">About Me</h2>
 
                 <div class="about__container bd-grid">
-                    <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
-                    </div>
+                    <div id="selfpic"></div>
                     
                     <div>
                         <h2 class="about__subtitle">I'm Bach (Alvin) Le</h2>
@@ -203,7 +202,7 @@
 
             <!--===== WORK =====-->
             <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+                <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
                     <a href="" class="work__img">
@@ -227,6 +226,8 @@
                 </div>
             </section>
 
+                        
+
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
@@ -244,13 +245,12 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Bach Le</p>
             <div class="footer__social">
                 <a href="https://www.facebook.com/alvinle29/" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/eodin.le_/?hl=vi" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bach Le. All rights reserved</p>
+            <p class="footer__copy">&#169; Bach Le. All rights reserved.</p>
         </footer>
 
 
